<resources>
    <string name="app_name">로드캡처</string>
    <string name="app_name_en">roadcapture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">이메일로 로그인</string>
    <string name="login_signup_label">아직 계정이 없으신가요?</string>
    <string name="login_signup"><u>여기에서 계정을 만드세요!</u></string>
    <string name="signup_email_title">이메일로 회원가입</string>
    <string name="signup_email_label">이메일 입력</string>
    <string name="signup_email_confirm">계속</string>
    <string name="signup_pwd_confirm">계속</string>
    <string name="signup_pwd_title">이메일로 회원가입</string>
    <string name="signup_pwd_label">비밀번호 입력</string>
    <string name="signup_pwd_label_confirm">비밀번호 재입력</string>
    <string name="password_input_signup_next">계속</string>
    <string name="signup_username_title">이메일로 회원가입</string>
    <string name="signup_username_label">닉네임 입력</string>
    <string name="signup_username_confirm">완료</string>
    <string name="signup_username_termsofservice">이용약관</string>
    <string name="signup_username_label_termsofservice">을 확인했으며 회원가입에 동의합니다.</string>
    <string name="follow_input_hint">검색어를 입력하세요</string>
    <string name="search_title_criteria">제목</string>
    <string name="search_username_criteria">닉네임</string>
    <string name="search_place_criteria">장소</string>
    <string name="settings_title">설정</string>
    <string name="settings_label_account">계정 설정</string>
    <string name="settings_label_service">서비스 설정</string>
    <string name="settings_label_support">고객지원</string>
    <string name="settings_label_location">위치 서비스</string>
    <string name="dlgpermissionlocation_title">위치 서비스 활성화</string>
    <string name="settings_label_notification">알림</string>
    <string name="settings_label_version">버전</string>
    <string name="settings_label_opinion">의견 보내기</string>
    <string name="settings_label_terms">서비스 약관</string>
    <string name="setting_account_title">프로필 및 계정</string>
    <string name="setting_account_connectedAccount">연결된 계정</string>
    <string name="setting_account_username">닉네임 변경</string>
    <string name="setting_account_password">비밀번호 변경</string>
    <string name="setting_account_resign">서비스 탈퇴</string>
    <string name="setting_account_logout">로그아웃</string>
    <string name="studio_label_follower">팔로워</string>
    <string name="signup_email_input_hint">abcd@gmail.com</string>
    <string name="signup_pwd_confirm_input_hint">비밀번호 확인</string>
    <string name="signup_pwd_input_hint">숫자, 영문 조합 8자리 이상</string>
    <string name="signup_username_input_hint">두 글자 이상 입력</string>
    <string name="notification_title">알림</string>
    <string name="follower_title">팔로워</string>
    <string name="following_title">팔로잉</string>
    <string name="picture_editor_label_place">장소</string>
    <string name="picture_editor_label_date">날짜</string>
    <string name="picture_editor_picture_name">제목</string>
    <string name="picture_editor_label_desc">설명</string>
    <string name="iplacesearch_label_roadname">도로명</string>
    <string name="iplacesearch_label_addressnumber">지번</string>
    <string name="search_place_title">장소 검색</string>
    <string name="search_place_input_hint">장소를 입력하세요</string>
    <string name="dlgfilter_title">필터</string>
    <string name="dlgfilter_reset">초기화</string>
    <string name="dlgfilter_label_duration">기간</string>
    <string name="filter_set_duration">기간 설정</string>
    <string name="dlgfilter_whole">전체 기간</string>
    <string name="dlgfilter_today">오늘</string>
    <string name="dlgfilter_week">한 주</string>
    <string name="dlgfilter_month">한 달</string>
    <string name="dlgfilter_year">한 해</string>
    <string name="dlgfilter_label_startdate">시작일</string>
    <string name="dlgfilter_label_enddate">종료일</string>
    <string name="dlgfilter_label_sort">정렬</string>
    <string name="dlgfilter_sort_latest">업로드 날짜</string>
    <string name="dlgfilter_sort_popularity">좋아요 수</string>
    <string name="dlgfilter_apply">적용하기</string>
    <string name="dlgalbumcreation_cancel">취소하기</string>
    <string name="dlgalbumcreation_confirm">앨범 만들기</string>
    <string name="dlgalbumcreation_title">앨범 만들기</string>
    <string name="picture_editor_title">앨범 만들기</string>
    <string name="place_search_noresult">검색결과가 없습니다. 다시 입력해주세요.</string>
    <string name="location_permission_always">항상 허용</string>
    <string name="location_permission_using">앱 사용중에만 허용</string>
    <string name="location_permission_confirm">항상 확인</string>
    <string name="location_permission_deny">거부</string>
    <string name="mystudio_modify_title">프로필 수정</string>
    <string name="my_studio_modification_change_profile_image">프로필 사진 변경</string>
    <string name="my_studio_modification_change_background_image">배경 사진 변경</string>
    <string name="my_studio_modification_change_profile_description">프로필 설명 변경</string>
    <string name="studio_label_following">팔로잉</string>
    <string name="my_studio_place">관심 지역</string>
    <string name="dlgpermissionlocation_confirm">설정으로</string>
    <string name="dlgpermissionlocation_cancel">취소하기</string>
    <string name="studio_label_album">앨범</string>
    <string name="studio_label_place">관심 지역</string>
    <string name="popupmenu_albums_more_share">공유</string>
    <string name="popupmenu_albums_more_report">신고</string>
    <string name="popupmenu_albums_more_hide">숨기기</string>
    <string name="popup_menu_comment_more_report">신고</string>
    <string name="comment_input_hint">댓글을 남겨주세요.</string>
    <string name="login_email_title">이메일 로그인</string>
    <string name="login_email_label_email">이메일 입력</string>
    <string name="login_email_label_pwd">비밀번호 입력</string>
    <string name="login_email_inputemail_hint">abcd@gmail.com</string>
    <string name="login_email_pwdinput_hint">6자리 이상</string>
    <string name="login_email_confirm">로그인</string>
    <string name="login_email_find"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="forgotpwd_title">비밀번호를 잊으셨나요?</string>
    <string name="forgotpwd_input_hint">abcd@gmail.com</string>
    <string name="forgotpwd_label">비밀번호 재설정을 위해 이메일을\n입력해주세요.</string>
    <string name="setting_username_title">닉네임 변경</string>
    <string name="setting_username_label">닉네임 입력</string>
    <string name="setting_username_input_hint">두 글자 이상 입력</string>
    <string name="setting_username_button">변경하기</string>
    <string name="setting_password_title">비밀번호 변경</string>
    <string name="setting_password_current_label">현재 비밀번호</string>
    <string name="setting_password_button">변경하기</string>
    <string name="dlglogout_title">정말 로그아웃 하시겠습니까?</string>
    <string name="dlglogout_confirm">로그아웃</string>
    <string name="dlglogout_cancel">취소</string>
    <string name="forgotpwd_confirm">확인</string>
    <string name="follow">팔로우</string>
    <string name="setting_password_after_label">변경할 비밀번호</string>
    <string name="setting_password_current_input">현재 비밀번호를 입력해주세요</string>
    <string name="setting_password_after_input">변경할 비밀번호를 입력해주세요</string>
    <string name="withdrawal_title">서비스 탈퇴</string>
    <string name="withdrawal_confirm">탈퇴하기</string>
    <string name="withdrawal_input_hint">abcd@gmail.com</string>
    <string name="termsofservice_title">이용 약관</string>
    <string name="bottomsheet_report_confirm">신고하기</string>
    <string name="bottomsheet_report_cancel">취소</string>
    <string name="bottomsheet_report_sexual">성적인 콘텐츠</string>
    <string name="bottomsheet_report_violent">폭력적인 콘텐츠</string>
    <string name="bottomsheet_report_dangerous">유해하거나 위험한 행위</string>
    <string name="bottomsheet_report_spam">스팸 또는 바이럴 마케팅</string>
    <string name="picture_editor_date_hint">날짜를 입력해주세요</string>
    <string name="picture_editor_place_hint">장소를 입력해주세요</string>
    <string name="picture_editor_name_user_input">제목을 입력해주세요</string>
    <string name="picture_editor_desc_hint">설명을 입력해주세요</string>
    <string name="dlgpermissionlocation_desc">위치 서비스를 허용하면\n여행을 기록할 수 있습니다.</string>
    <string name="dlgalbumcreation_desc">앨범을 만드시겠습니까?</string>
    <string name="my_studio_modification_username_title">이름</string>
    <string name="mystudio_modify_label_desc">소개</string>
    <string name="mystudio_modify_label_place">관심지역</string>
    <string name="login_title">로 드 캡 처</string>
    <string name="albumreg_toolbar_title">앨범 등록</string>
    <string name="albumreg_label_thumbnail">앨범 썸네일</string>
    <string name="albumreg_label_title">앨범 제목</string>
    <string name="albumreg_title">앨범 제목을 입력해주세요</string>
    <string name="albumreg_label_desc">앨범 설명</string>
    <string name="albumreg_desc">앨범 설명을 작성해주세요</string>
    <string name="dlgalbumcreationcancel_title">앨범 만들기 취소</string>
    <string name="dlgalbumcreationcancel_desc">앨범 만들기를 취소하시겠어요?\n기록했던 모든 사진들이 사라집니다.</string>
    <string name="dlgalbumcreationcancel_confirm">확인</string>
    <string name="dlgalbumcreationcancel_cancel">취소</string>
    <string name="dlgthumbnailsetting_title">썸네일 설정</string>
    <string name="dlgthumbnailsetting_desc">앨범 등록을 위한 썸네일 설정이 필요합니다.\n앨범 썸네일 사용 체크를 해주세요.</string>
    <string name="dlgthumbnailsetting_confirm">확인</string>
    <string name="dlgpicturedelete_title">사진 삭제</string>
    <string name="dlgpicturedelete_desc">사진을 삭제하시겠어요?\n작성한 내용이 모두 사라집니다.</string>
    <string name="dlgpicturedelete_confirm">삭제하기</string>
    <string name="dlgpicturedelete_cancel">취소</string>
    <string name="comment_title">댓글</string>
    <string name="bottomsheet_comment_title">댓글</string>
    <string name="bottomsheet_comment_input_hint">댓글을 남겨주세요.</string>
    <string name="withdrawal_desc">탈퇴 후 계정 복구는 불가능합니다.\n탈퇴를 원하시면 이메일을 입력해주세요.</string>
    <string name="withdrawal_label">정말 탈퇴하시겠습니까?</string>
    <string name="mystudio_edit">프로필 편집</string>
    <string name="picture_editor_label_thumbnail">앨범 썸네일로 사용</string>
    <string name="search_input_hint">검색어를 입력하세요.</string>
    <string name="studio_edit">팔로우</string>
    <string name="iloading_retry">재시도</string>
    <string name="comment_nocomment1">아직 댓글이 없습니다</string>
    <string name="comment_nocomment2">가장 먼저 댓글을 남겨보세요 :)</string>
    <string name="ilabel_albums_studio">앨범</string>
    <string name="followingalbums_nofollowing1">아직 아무도 팔로우를 하지 않았어요</string>
    <string name="followingalbums_nofollowing2">팔로잉 후 소식을 받아보세요 :)</string>
    <string name="search_nosearch1">검색 결과가 없습니다.</string>
    <string name="search_nosearch2">다시 한번 검색해주세요 :)</string>
    <string name="popup_menu_mycomment_more_edit">수정</string>
    <string name="popup_menu_mycomment_more_del">삭제</string>
    <string name="popupmenu_studio_more_share">공유</string>
    <string name="popupmenu_mystudio_more_edit">수정</string>
    <string name="popupmenu_mystudio_more_del">삭제</string>
    <string name="popupmenu_mystudio_more_share">공유</string>
    <string name="popupmenu_studio_more_report">신고</string>
    <string name="popupmenu_myalbums_more_share">공유</string>
    <string name="popupmenu_myalbums_more_edit">수정</string>
    <string name="popup_menu_albums_more_del">삭제</string>
    <string name="popupmenu_myalbums_more_del">삭제</string>
    <string name="dlgplacesearch_title">장소 검색</string>
    <string name="dlgplacesearch_search">키워드로 검색</string>
    <string name="dlgplacesearch_map">지도에서 설정</string>
    <string name="mystudio_noalbum1">아직 앨범이 없습니다</string>
    <string name="mystudio_noalbum2">앨범을 만들어 기록을 남겨보세요 :)</string>
    <string name="studio_noalbum">앨범이 없습니다 :)</string>
    <string name="follower_nofollower">아직 아무도 팔로우 하지 않았어요 :)</string>
    <string name="following_nofollowing">아직 아무도 팔로우 하지 않았어요 :)</string>
    <string name="following_nofollowing2">팔로잉 후 소식을 받아보세요 :)</string>
    <string name="followingalbums_noalbum">아직 아무도 앨범을 만들지 않았어요 :)</string>

</resources>