<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_bottomsheet_report_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dlg">

    <RadioGroup
        android:id="@+id/rgroup_bottomsheet_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingTop="16dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbtn_bottomsheet_report_sexual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomsheet_report_sexual"
            android:textAppearance="@style/SubHead" />

        <RadioButton
            android:id="@+id/rbtn_bottomsheet_report_violent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomsheet_report_violent"
            android:textAppearance="@style/SubHead" />

        <RadioButton
            android:id="@+id/rbtn_bottomsheet_report_dangerous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomsheet_report_dangerous"
            android:textAppearance="@style/SubHead" />

        <RadioButton
            android:id="@+id/rbtn_bottomsheet_report_spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomsheet_report_spam"
            android:textAppearance="@style/SubHead" />

    </RadioGroup>

    <View
        android:id="@+id/view_bottomsheet_report_divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgroup_bottomsheet_report" />

    <TextView
        android:id="@+id/text_bottomsheet_report_confirm"
        style="@style/DialogButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/bottomsheet_report_confirm"
        android:textColor="@color/secondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bottomsheet_report_divider1" />

    <View
        android:id="@+id/view_bottomsheet_report_divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bottomsheet_report_confirm" />

    <TextView
        android:id="@+id/text_bottomsheet_report_cancel"
        style="@style/DialogButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/bottomsheet_report_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bottomsheet_report_divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>