<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_dlgfilter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dlg_bottomsheet">

        <ImageView
            android:id="@+id/image_dlgfilter_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/text_dlgfilter_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_dlgfilter_title"
            app:tint="@color/black"
            bind:rippleEffect="@{null}" />

        <TextView
            android:id="@+id/text_dlgfilter_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dlgfilter_title"
            android:textAppearance="@style/SubHeadBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_dlgfilter_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:text="@string/dlgfilter_reset"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Body"
            app:layout_constraintBottom_toBottomOf="@id/view_dlgfilter_divider1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_dlgfilter_divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dlgfilter_title" />

        <TextView
            android:id="@+id/text_dlgfilter_label_duration"
            style="@style/SubHeadBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/dlgfilter_label_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_dlgfilter_divider1" />

        <HorizontalScrollView
            android:id="@+id/scroll_dlgfilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dlgfilter_label_duration">

            <RadioGroup
                android:id="@+id/radiogroup_dlgfilter_duration"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:gravity="center|start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/radiobtn_dlgfilter_whole"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:text="@string/dlgfilter_whole" />

                <RadioButton
                    android:id="@+id/radiobtn_dlgfilter_today"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/dlgfilter_today" />

                <RadioButton
                    android:id="@+id/radiobtn_dlgfilter_week"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/dlgfilter_week" />

                <RadioButton
                    android:id="@+id/radiobtn_dlgfilter_month"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/dlgfilter_month" />

                <RadioButton
                    android:id="@+id/radiobtn_dlgfilter_year"
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/dlgfilter_year" />
            </RadioGroup>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/text_dlgfilter_label_startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/dlgfilter_label_startdate"
            android:textAppearance="@style/Body"
            app:layout_constraintStart_toStartOf="@id/btn_dlgfilter_startdate"
            app:layout_constraintTop_toBottomOf="@id/scroll_dlgfilter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dlgfilter_startdate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/btn_bottomsheet"
            android:backgroundTint="@color/inactive"
            android:elevation="1dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_dlgfilter_h50p"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dlgfilter_label_startdate"
            bind:rippleEffect="@{null}"
            tools:text="2021년 09월 07일" />

        <TextView
            android:id="@+id/text_dlgfilter_label_enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:text="@string/dlgfilter_label_enddate"
            android:textAppearance="@style/Body"
            app:layout_constraintStart_toStartOf="@id/btn_dlgfilter_enddate"
            app:layout_constraintTop_toTopOf="@id/text_dlgfilter_label_startdate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dlgfilter_enddate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/btn_bottomsheet"
            android:elevation="1dp"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"
            android:textSize="14sp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_dlgfilter_h50p"
            app:layout_constraintTop_toTopOf="@id/btn_dlgfilter_startdate"
            tools:text="2021년 09월 07일" />

        <View
            android:id="@+id/view_dlgfilter_divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/divider"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_dlgfilter_startdate" />

        <TextView
            android:id="@+id/text_dlgfilter_label_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dlgfilter_label_sort"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/SubHeadBold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_dlgfilter_divider2" />

        <RadioGroup
            android:id="@+id/radiogroup_dlgfilter_sorting"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_dlgfilter_label_sort">

            <RadioButton
                android:id="@+id/radiobtn_dlgfilter_sort_latest"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/selector_radio_filter"
                android:checked="true"
                android:text="@string/dlgfilter_sort_latest" />

            <RadioButton
                android:id="@+id/radiobtn_dlgfilter_sort_popularity"
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:text="@string/dlgfilter_sort_popularity" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_dlgfilter_apply"
            style="@style/BottomSheetButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginVertical="16dp"
            android:text="@string/dlgfilter_apply"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radiogroup_dlgfilter_sorting"
            app:layout_constraintVertical_bias="0.666" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_dlgfilter_h50p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>