<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_dlgpermissionlocation_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dlg_bottomsheet">

    <TextView
        android:id="@+id/text_dlgpermissionlocation_title"
        style="@style/BottomSheetHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dlgpermissionlocation_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_dlgpermissionlocation"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dlgpermissionlocation_title" />

    <TextView
        android:id="@+id/text_dlgpermissionlocation_desc"
        style="@style/Head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/dlgpermissionlocation_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_dlgpermissionlocation" />

    <Button
        android:id="@+id/btn_dlgpermissionlocation_confirm"
        style="@style/BottomSheetButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dlgpermissionlocation_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_dlgpermissionlocation_desc" />

    <Button
        android:id="@+id/btn_dlgpermissionlocation_cancel"
        style="@style/BottomSheetButtonWhite"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/dlgpermissionlocation_cancel"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_dlgpermissionlocation_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>